- Improved backwards compatibility with PCB tracks with non integer size (#107).
- Increased to 10000 the number of processable tokens (#129).
- FidoCadJ stores the position of the current window (#126).
- The libraries can be hidden to increase the drawing area (#127).
- Change field color when a key is invalid while defining a new symbol (#120).
- Export towards gEDA PCB file format (#132).

Version 0.24.6
--------------
(April 7, 2016)
- Complete review of the source code, refactoring, strict coding style policy have been adopted.
- Library "ey_libraries" is now considered as standard library.
- Implemented a complete print preview, showing margins and printable area in the page.
- Corrected Issue #21 (Color error in EPS format).
- Hand pan function is now more traditional (Issue #25).
- Corrected GitHub issue #41 (Printing margins).
- Corrected Issue #63 (Problematic code with wrong layer number).
- The "strict compatibility with FidoCAD" mode is automatically disabled each time the program is restarted (Issue #75).
- PCB lines can have a noninteger width.
- Corrected Issue #76 (Geometric shapes invisible in some cases).
- Corrected Issue #77 (Text with negative size).
- Corrected Issue #78 (Negative arrow length).
- PCB tracks can now have non integer widths (that addresses Issue #79).
- Corrected Issue #81 (Dashed lines not rendered correctly in some cases).
- Native file dialogs on Windows (Issue #82).
- Corrected Issue #88 (Missing 1° caracter on Zoom field).

Version 0.24.5
--------------
(April 6, 2015)
- Contains the new EY library of components "ey_libraries".
- Fixed bug #56 (some components do not appear in the preview).
- Fixed bug #61 (multiple selection using Commands on MacOSX).
- Fixed bug #62 (wrong UTF-8 tag in SVN export).
- Fixed bug #60 (PDF export does not support UTF-8 characters) with some limitations.
- Better zoom handling.
- Added the "Duplicate" command associated to Ctrl+D, Ctrl+G now shows the drawing code (it once was Ctrl+D).